# tw_train_ticket_bot

./: .dockerignore  .gitignore  Dockerfile  booking_logic.py  captcha_handler.py  docker-compose.yml  memory.md  model.pt  pyproject.toml  requirements.txt  result copy.txt  result.txt  server.py  test.py
.github/workflows/: build.yml
log/: log_5f9f39920e464e9cac79ffeb19ac90f1.txt
