[project]
name = "tw-train-ticket-bot"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.4",
    "librosa==0.11.0",
    "lxml==5.4.0",
    "pydub==0.25.1",
    "aiohttp>=3.11.18",
    "torch==2.7.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
