[project]
name = "tw-train-ticket-bot"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4==4.6.3",
    "flask==1.1.4",
    "gunicorn==23.0.0",
    "librosa==0.9.1",
    "lxml>=5.4.0",
    "markupsafe==2.0.1",
    "numba==0.51.2",
    "numpy==1.21.5",
    "pydub==0.25.1",
    "requests==2.23.0",
    "tensorflow-cpu==2.11.1",
]
